feat(suite-native): enable passphrase on device

--- a/suite-native/passphrase/tsconfig.json
+++ b/suite-native/passphrase/tsconfig.json
@@ -8,9 +8,13 @@
         {
             "path": "../../suite-common/wallet-constants"
         },
+        {
+            "path": "../../suite-common/wallet-core"
+        },
         { "path": "../atoms" },
         { "path": "../forms" },
         { "path": "../intl" },
+        { "path": "../../packages/connect" },
         { "path": "../../packages/styles" }
     ]
 }
