--- a/suite-native/passphrase/package.json
+++ b/suite-native/passphrase/package.json
@@ -12,12 +12,15 @@
     "dependencies": {
         "@suite-common/validators": "workspace:*",
         "@suite-common/wallet-constants": "workspace:*",
+        "@suite-common/wallet-core": "workspace:*",
         "@suite-native/atoms": "workspace:*",
         "@suite-native/forms": "workspace:*",
         "@suite-native/intl": "workspace:*",
+        "@trezor/connect": "workspace:*",
         "@trezor/styles": "workspace:*",
         "jotai": "1.9.1",
         "react": "18.2.0",
-        "react-native": "0.73.2"
+        "react-native": "0.73.2",
+        "react-redux": "8.0.7"
     }
 }
