fix: from g:tsx to local tsx in prepublish script
- The usage of g:tsx was causing issues in the npm relase process since
  the required env variable "process.env.npm_package_name" was set to
trezor-suite instead of @trezor/<package-name> that is expected by
prepublish.js script.

--- a/packages/blockchain-link/package.json
+++ b/packages/blockchain-link/package.json
@@ -48,8 +48,8 @@
         "test:unit": "yarn g:jest --verbose -c jest.config.unit.js",
         "test:integration": "yarn g:jest -c jest.config.integration.js",
         "type-check": "yarn g:tsc --build tsconfig.json",
-        "prepublishOnly": "yarn g:tsx ../../scripts/prepublishNPM.js",
-        "prepublish": "yarn g:tsx ../../scripts/prepublish.js"
+        "prepublishOnly": "yarn tsx ../../scripts/prepublishNPM.js",
+        "prepublish": "yarn tsx ../../scripts/prepublish.js"
     },
     "devDependencies": {
         "@trezor/e2e-utils": "workspace:*",
@@ -57,6 +57,7 @@
         "fs-extra": "^11.2.0",
         "html-webpack-plugin": "^5.6.0",
         "tiny-worker": "^2.3.0",
+        "tsx": "^4.7.0",
         "webpack": "^5.90.1",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1",
