--- a/packages/connect-common/package.json
+++ b/packages/connect-common/package.json
@@ -35,8 +35,8 @@
         "test:unit": "yarn g:jest",
         "build:lib": "yarn g:rimraf lib && yarn g:tsc --build ./tsconfig.lib.json",
         "type-check": "yarn g:tsc --build tsconfig.json",
-        "prepublishOnly": "yarn g:tsx ../../scripts/prepublishNPM.js",
-        "prepublish": "yarn g:tsx ../../scripts/prepublish.js"
+        "prepublishOnly": "yarn tsx ../../scripts/prepublishNPM.js",
+        "prepublish": "yarn tsx ../../scripts/prepublish.js"
     },
     "dependencies": {
         "@trezor/env-utils": "workspace:*",
@@ -44,5 +44,8 @@
     },
     "peerDependencies": {
         "tslib": "^2.6.2"
+    },
+    "devDependencies": {
+        "tsx": "^4.7.0"
     }
 }
