--- a/packages/connect-web/package.json
+++ b/packages/connect-web/package.json
@@ -35,8 +35,8 @@
         "build:webextension": "TS_NODE_PROJECT=\"tsconfig.lib.json\" yarn webpack --config ./webpack/prod.webpack.config.ts",
         "build": "yarn g:rimraf build && yarn build:inline && yarn build:webextension",
         "test:e2e": "yarn playwright install && yarn xvfb-maybe -- playwright test --config=./e2e/playwright.config.ts",
-        "prepublishOnly": "yarn g:tsx ../../scripts/prepublishNPM.js",
-        "prepublish": "yarn g:tsx ../../scripts/prepublish.js"
+        "prepublishOnly": "yarn tsx ../../scripts/prepublishNPM.js",
+        "prepublish": "yarn tsx ../../scripts/prepublish.js"
     },
     "dependencies": {
         "@trezor/connect": "workspace:*",
@@ -54,6 +54,7 @@
         "html-webpack-plugin": "^5.6.0",
         "selfsigned": "^2.4.1",
         "terser-webpack-plugin": "^5.3.9",
+        "tsx": "^4.7.0",
         "webpack": "^5.90.1",
         "webpack-cli": "^5.1.4",
         "webpack-merge": "^5.10.0",
