--- a/packages/schema-utils/package.json
+++ b/packages/schema-utils/package.json
@@ -17,12 +17,13 @@
         "type-check": "yarn g:tsc --build",
         "build:lib": "rimraf ./lib && yarn g:tsc --build tsconfig.lib.json",
         "codegen": "ts-node --skip-project ./src/codegen.ts",
-        "prepublishOnly": "yarn g:tsx ../../scripts/prepublishNPM.js",
-        "prepublish": "yarn g:tsx ../../scripts/prepublish.js"
+        "prepublishOnly": "yarn tsx ../../scripts/prepublishNPM.js",
+        "prepublish": "yarn tsx ../../scripts/prepublish.js"
     },
     "devDependencies": {
         "@sinclair/typebox-codegen": "^0.8.13",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "tsx": "^4.7.0"
     },
     "dependencies": {
         "@sinclair/typebox": "^0.31.28",
