--- a/packages/transport/package.json
+++ b/packages/transport/package.json
@@ -39,8 +39,8 @@
         "publish:lib": "./scripts/publish-lib.sh",
         "test:unit": "jest",
         "test:e2e": "ts-node -O '{\"module\": \"commonjs\", \"esModuleInterop\": true}' ./e2e/run.ts",
-        "prepublishOnly": "yarn g:tsx ../../scripts/prepublishNPM.js",
-        "prepublish": "yarn g:tsx ../../scripts/prepublish.js"
+        "prepublishOnly": "yarn tsx ../../scripts/prepublishNPM.js",
+        "prepublish": "yarn tsx ../../scripts/prepublish.js"
     },
     "devDependencies": {
         "@trezor/trezor-user-env-link": "workspace:*",
@@ -48,7 +48,8 @@
         "@types/sharedworker": "^0.0.111",
         "@types/w3c-web-usb": "^1.0.10",
         "jest": "29.7.0",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "tsx": "^4.7.0"
     },
     "dependencies": {
         "@trezor/protobuf": "workspace:*",
