--- a/suite-native/app/package.json
+++ b/suite-native/app/package.json
@@ -102,8 +102,11 @@
     "devDependencies": {
         "@babel/core": "^7.20.0",
         "@babel/plugin-transform-export-namespace-from": "^7.23.4",
+        "@config-plugins/detox": "^7.0.0",
         "@react-native/babel-preset": "0.73.21",
-        "babel-plugin-transform-remove-console": "^6.9.4"
+        "babel-plugin-transform-remove-console": "^6.9.4",
+        "detox": "^20.18.4",
+        "jest": "^29.7.0"
     },
     "private": true
 }
