--- a/suite-native/app/package.json
+++ b/suite-native/app/package.json
@@ -14,7 +14,9 @@
         "prebuild": "expo prebuild",
         "eas-build-post-install": "yarn workspace @suite-common/message-system sign-config",
         "eas-build-on-success": "./upload-to-firebase.sh",
-        "prebuild:clean": "expo prebuild --clean"
+        "prebuild:clean": "expo prebuild --clean",
+        "build:e2e": "../../node_modules/.bin/detox build --configuration",
+        "test:e2e": "../../node_modules/.bin/detox test --configuration"
     },
     "dependencies": {
         "@react-native/metro-config": "0.73.4",
@@ -104,9 +106,13 @@
         "@babel/plugin-transform-export-namespace-from": "^7.23.4",
         "@config-plugins/detox": "^7.0.0",
         "@react-native/babel-preset": "0.73.21",
+        "@types/jest": "^29.5.12",
+        "@types/node": "^20.11.24",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "detox": "^20.18.4",
-        "jest": "^29.7.0"
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.2",
+        "typescript": "^5.3.3"
     },
     "private": true
 }
