--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,8 +1,8 @@
 {
     "extends": "./tsconfig.base.json",
     "compilerOptions": {
-        "module": "commonjs",
-        "moduleResolution": "node",
+        "module": "ES2020",
+        "moduleResolution": "Bundler",
         "target": "es6",
 
         "composite": false,
