--- a/packages/connect/package.json
+++ b/packages/connect/package.json
@@ -19,16 +19,19 @@
         "javascript"
     ],
     "sideEffects": false,
-    "main": "lib/index",
+    "main": "src/index.ts",
     "browser": {
-        "./lib/index": "./lib/index-browser",
-        "./lib/utils/assets": "./lib/utils/assets-browser",
-        "./lib/workers/workers": "./lib/workers/workers-browser"
+        "./src/index": "./src/index-browser.ts",
+        "./src/utils/assets": "./src/utils/assets-browser.ts",
+        "./src/workers/workers": "./src/workers/workers-browser.ts"
     },
-    "react-native": {
-        "./lib/index": "./lib/index",
-        "./lib/workers/workers": "./lib/workers/workers-react-native",
-        "./lib/utils/assets": "./lib/utils/assets-native"
+    "publishConfig": {
+        "main": "lib/index.js",
+        "browser": {
+            "./lib/index": "./lib/index-browser.js",
+            "./lib/utils/assets": "./lib/utils/assets-browser.js",
+            "./lib/workers/workers": "./lib/workers/workers-browser.js"
+        }
     },
     "files": [
         "lib/",
