--- a/packages/transport/package.json
+++ b/packages/transport/package.json
@@ -15,18 +15,19 @@
         "Trezor",
         "transport"
     ],
-    "main": "./lib/index.js",
+    "main": "./src/index.ts",
     "browser": {
-        "./lib/transports/nodeusb": "./lib/transports/nodeusb.browser",
-        "./lib/transports/udp": "./lib/transports/udp.browser",
-        "./lib/transports/webusb": "./lib/transports/webusb.browser",
-        "./src/transports/nodeusb": "./src/transports/nodeusb.browser",
-        "./src/transports/udp": "./src/transports/udp.browser",
-        "./src/transports/webusb": "./src/transports/webusb.browser"
+        "./src/transports/nodeusb": "./src/transports/nodeusb.browser.ts",
+        "./src/transports/udp": "./src/transports/udp.browser.ts",
+        "./src/transports/webusb": "./src/transports/webusb.browser.ts"
     },
-    "react-native": {
-        "__comment__": "Fixes commutation between android device and bridge by always applying content-type header.",
-        "./lib/utils/applyContentTypeHeader": "./lib/utils/applyContentTypeHeader.native.js"
+    "publishConfig": {
+        "main": "./lib/index.js",
+        "browser": {
+            "./lib/transports/nodeusb": "./lib/transports/nodeusb.browser.ts",
+            "./lib/transports/udp": "./lib/transports/udp.browser.ts",
+            "./lib/transports/webusb": "./lib/transports/webusb.browser.ts"
+        }
     },
     "files": [
         "lib/",
