--- a/package.json
+++ b/package.json
@@ -148,7 +148,22 @@
         "version-bump-prompt": "^6.1.0"
     },
     "dependenciesMeta": {
+        "core-js": {
+            "built": false
+        },
         "core-js-pure": {
+            "built": false
+        },
+        "es5-ext": {
+            "built": false
+        },
+        "web3": {
+            "built": false
+        },
+        "web3-bzz": {
+            "built": false
+        },
+        "web3-shh": {
             "built": false
         }
     },
