--- a/.github/workflows/connect-dev-release-test.yml
+++ b/.github/workflows/connect-dev-release-test.yml
@@ -1,4 +1,4 @@
-name: "[Build/Test] Connect Popup"
+name: "[Build/Test] Connect Explorer"
 
 permissions:
   id-token: write # for fetching the OIDC token
@@ -18,6 +18,7 @@ on:
       - "submodules/trezor-common"
       - "yarn.lock"
       - ".github/workflows/connect-dev-release.yml"
+      - ".github/workflows/template-connect-popup-test-params.yml"
 
 concurrency:
   group: ${{ github.workflow }}-$${{ github.head_ref || github.run_id }}
@@ -27,7 +28,7 @@ env:
   DEV_SERVER_HOSTNAME: "dev.suite.sldev.cz"
 
 jobs:
-  build-deploy-connect-explorer:
+  build-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -64,7 +65,6 @@ jobs:
       - name: Build connect-explorer
         env:
           ASSET_PREFIX: /connect/${{ steps.extract_branch.outputs.branch }}
-          # TODO: maybe we don't want to build it for production for every branch
           NODE_ENV: "production"
           url: https://${{ env.DEV_SERVER_HOSTNAME }}/connect/${{ steps.extract_branch.outputs.branch }}
         run: |
@@ -109,7 +109,7 @@ jobs:
             packages/connect-explorer/build-webextension
 
   methods:
-    needs: [build-deploy-connect-explorer]
+    needs: [build-deploy]
     uses: ./.github/workflows/template-connect-popup-test-params.yml
     with:
       test-name: methods.test
@@ -117,7 +117,7 @@ jobs:
       run-webextension: true
 
   popup-close:
-    needs: [build-deploy-connect-explorer]
+    needs: [build-deploy]
     uses: ./.github/workflows/template-connect-popup-test-params.yml
     with:
       test-name: popup-close.test
@@ -125,7 +125,7 @@ jobs:
       run-webextension: true
 
   passphrase:
-    needs: [build-deploy-connect-explorer]
+    needs: [build-deploy]
     uses: ./.github/workflows/template-connect-popup-test-params.yml
     with:
       test-name: passphrase.test
@@ -133,7 +133,7 @@ jobs:
       run-webextension: true
 
   popup-pages:
-    needs: [build-deploy-connect-explorer]
+    needs: [build-deploy]
     uses: ./.github/workflows/template-connect-popup-test-params.yml
     with:
       test-name: popup-pages.test
@@ -141,28 +141,28 @@ jobs:
       run-webextension: true
 
   browser-support:
-    needs: [build-deploy-connect-explorer]
+    needs: [build-deploy]
     uses: ./.github/workflows/template-connect-popup-test-params.yml
     with:
       test-name: browser-support.test
       DEV_SERVER_HOSTNAME: dev.suite.sldev.cz
 
   permissions:
-    needs: [build-deploy-connect-explorer]
+    needs: [build-deploy]
     uses: ./.github/workflows/template-connect-popup-test-params.yml
     with:
       test-name: permissions.test
       DEV_SERVER_HOSTNAME: dev.suite.sldev.cz
 
   transport:
-    needs: [build-deploy-connect-explorer]
+    needs: [build-deploy]
     uses: ./.github/workflows/template-connect-popup-test-params.yml
     with:
       test-name: transport.test
       DEV_SERVER_HOSTNAME: dev.suite.sldev.cz
 
   unchained:
-    needs: [build-deploy-connect-explorer]
+    needs: [build-deploy]
     uses: ./.github/workflows/template-connect-popup-test-params.yml
     with:
       test-name: unchained.test
