--- a/packages/connect-explorer-nextra/package.json
+++ b/packages/connect-explorer-nextra/package.json
@@ -3,8 +3,16 @@
     "packageManager": "yarn@4.0.2",
     "version": "1.0.0",
     "private": true,
+    "scripts": {
+        "dev": "next",
+        "build": "next build && rm -rf build && mv out build",
+        "start": "next start",
+        "lint:js": "yarn g:eslint '**/*{.ts,.tsx}'",
+        "lint:styles": "npx stylelint './src/**/*{.ts,.tsx}' --cache --config ../../.stylelintrc",
+        "type-check": "yarn g:tsc --build tsconfig.json"
+    },
     "dependencies": {
-        "@sinclair/typebox": "^0.32.15",
+        "@sinclair/typebox": "^0.31.28",
         "@trezor/components": "workspace:^",
         "@trezor/connect-web": "workspace:^",
         "@trezor/protobuf": "workspace:^",
@@ -22,18 +30,7 @@
         "redux-thunk": "^2.4.2",
         "styled-components": "^5.3.10"
     },
-    "scripts": {
-        "dev": "next",
-        "build": "next build && rm -rf build && mv out build",
-        "start": "next start",
-        "lint:js": "yarn g:eslint '**/*{.ts,.tsx}'",
-        "lint:styles": "npx stylelint './src/**/*{.ts,.tsx}' --cache --config ../../.stylelintrc",
-        "type-check": "yarn g:tsc --build tsconfig.json"
-    },
     "devDependencies": {
-        "@types/node": "20.11.24",
-        "@types/redux-logger": "^3.0.11",
-        "autoprefixer": "^10.4.18",
-        "postcss": "^8.4.35"
+        "@types/redux-logger": "^3.0.11"
     }
 }
