--- a/packages/suite/package.json
+++ b/packages/suite/package.json
@@ -19,6 +19,7 @@
         "test-unit:watch": "yarn g:jest -o --watch"
     },
     "dependencies": {
+        "@emotion/is-prop-valid": "1.2.2",
         "@everstake/wallet-sdk": "^0.3.40",
         "@formatjs/intl": "2.10.0",
         "@hookform/resolvers": "3.3.4",
