--- a/.github/workflows/connect-dev-release.yml
+++ b/.github/workflows/connect-dev-release.yml
@@ -35,6 +35,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
+          submodules: recursive
 
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -51,15 +52,28 @@ jobs:
         with:
           node-version-file: ".nvmrc"
 
+      - name: Install dependencies
+        run: |
+          echo -e "\nenableScripts: false" >> .yarnrc.yml
+          yarn workspaces focus @trezor/connect-iframe @trezor/connect-web @trezor/connect-popup @trezor/connect-webextension @trezor/connect-explorer
+
       - name: Build connect-web
         run: |
-          git submodule update --init --recursive
-          yarn install --immutable
-          yarn build:libs
           yarn workspace @trezor/connect-web build
-          ./packages/connect-web/scripts/check-inline-build-size.sh
+
+      - name: Check connect-web build size
+        run: ./packages/connect-web/scripts/check-inline-build-size.sh
+
+      - name: Build connect-iframe
+        run: |
           yarn workspace @trezor/connect-iframe build
+
+      - name: Build connect-popup
+        run: |
           yarn workspace @trezor/connect-popup build
+
+      - name: Build connect-webextension
+        run: |
           yarn workspace @trezor/connect-webextension build
 
       - name: Build connect-explorer
