chore: use project references for build:libs too

--- a/packages/auth-server/tsconfig.lib.json
+++ b/packages/auth-server/tsconfig.lib.json
@@ -1,7 +1,6 @@
 {
     "extends": "../../tsconfig.lib.json",
-    "compilerOptions": {
-        "outDir": "lib"
-    },
-    "include": ["./src"]
+    "compilerOptions": { "outDir": "lib" },
+    "include": ["./src"],
+    "references": []
 }
