--- a/packages/protobuf/tsconfig.lib.json
+++ b/packages/protobuf/tsconfig.lib.json
@@ -1,8 +1,6 @@
 {
     "extends": "../../tsconfig.lib.json",
-    "compilerOptions": {
-        "outDir": "lib",
-        "importHelpers": true
-    },
-    "include": ["./src"]
+    "compilerOptions": { "outDir": "lib" },
+    "include": ["./src"],
+    "references": [{ "path": "../schema-utils" }]
 }
