--- a/packages/blockchain-link-types/tsconfig.lib.json
+++ b/packages/blockchain-link-types/tsconfig.lib.json
@@ -1,7 +1,9 @@
 {
     "extends": "../../tsconfig.lib.json",
-    "compilerOptions": {
-        "outDir": "lib"
-    },
-    "include": ["./src"]
+    "compilerOptions": { "outDir": "lib" },
+    "include": ["./src"],
+    "references": [
+        { "path": "../type-utils" },
+        { "path": "../utxo-lib" }
+    ]
 }
