--- a/packages/connect-analytics/tsconfig.lib.json
+++ b/packages/connect-analytics/tsconfig.lib.json
@@ -2,8 +2,8 @@
     "extends": "../../tsconfig.lib.json",
     "compilerOptions": {
         "outDir": "./lib",
-        "importHelpers": true,
         "esModuleInterop": false
     },
-    "include": ["./src"]
+    "include": ["./src"],
+    "references": [{ "path": "../analytics" }]
 }
