--- a/docker/docker-compose.connect-test.yml
+++ b/docker/docker-compose.connect-test.yml
@@ -6,22 +6,6 @@ services:
       - SDL_VIDEODRIVER=dummy
       - XDG_RUNTIME_DIR=/var/tmp
     network_mode: bridge
-
-  test-run:
-    image: registry.gitlab.com/satoshilabs/trezor/trezor-suite/base:latest
-    environment:
-      - TESTS_FIRMWARE=$TESTS_FIRMWARE
-      - TESTS_FIRMWARE_MODEL=$TESTS_FIRMWARE_MODEL
-      - TESTS_FIRMWARE_URL=$TESTS_FIRMWARE_URL
-      - TESTS_INCLUDED_METHODS=$TESTS_INCLUDED_METHODS
-      - TESTS_EXCLUDED_METHODS=$TESTS_EXCLUDED_METHODS
-      - TESTS_PATTERN=$TESTS_PATTERN
-      - TESTS_USE_TX_CACHE=false
-      - TESTS_USE_WS_CACHE=false
-    depends_on:
-      - trezor-user-env-unix
-    network_mode: service:trezor-user-env-unix
-    working_dir: /trezor-suite
-    command: bash -c "$TESTS_SCRIPT $TESTS_PATTERN"
-    volumes:
-      - ../:/trezor-suite
+    ports:
+      - "9001:9001"
+      - "9002:9002"
