chore: reformat tsconfig.lib.json

--- a/packages/analytics/tsconfig.lib.json
+++ b/packages/analytics/tsconfig.lib.json
@@ -6,7 +6,11 @@
     },
     "include": ["./src"],
     "references": [
-        { "path": "../env-utils" },
-        { "path": "../utils" }
+        {
+            "path": "../env-utils"
+        },
+        {
+            "path": "../utils"
+        }
     ]
 }
