--- a/packages/connect-analytics/tsconfig.lib.json
+++ b/packages/connect-analytics/tsconfig.lib.json
@@ -5,5 +5,9 @@
         "esModuleInterop": false
     },
     "include": ["./src"],
-    "references": [{ "path": "../analytics" }]
+    "references": [
+        {
+            "path": "../analytics"
+        }
+    ]
 }
