--- a/packages/connect-web/tsconfig.lib.json
+++ b/packages/connect-web/tsconfig.lib.json
@@ -7,8 +7,14 @@
     },
     "include": ["./src"],
     "references": [
-        { "path": "../connect" },
-        { "path": "../connect-common" },
-        { "path": "../utils" }
+        {
+            "path": "../connect"
+        },
+        {
+            "path": "../connect-common"
+        },
+        {
+            "path": "../utils"
+        }
     ]
 }
