--- a/packages/transport/tsconfig.lib.json
+++ b/packages/transport/tsconfig.lib.json
@@ -6,9 +6,17 @@
     },
     "include": ["./src"],
     "references": [
-        { "path": "../protobuf" },
-        { "path": "../protocol" },
-        { "path": "../utils" },
-        { "path": "../trezor-user-env-link" }
+        {
+            "path": "../protobuf"
+        },
+        {
+            "path": "../protocol"
+        },
+        {
+            "path": "../utils"
+        },
+        {
+            "path": "../trezor-user-env-link"
+        }
     ]
 }
