--- a/packages/utxo-lib/tsconfig.lib.json
+++ b/packages/utxo-lib/tsconfig.lib.json
@@ -1,6 +1,12 @@
 {
     "extends": "../../tsconfig.lib.json",
-    "compilerOptions": { "outDir": "./lib" },
+    "compilerOptions": {
+        "outDir": "./lib"
+    },
     "include": ["./src"],
-    "references": [{ "path": "../utils" }]
+    "references": [
+        {
+            "path": "../utils"
+        }
+    ]
 }
