--- a/packages/blockchain-link/tsconfig.lib.json
+++ b/packages/blockchain-link/tsconfig.lib.json
@@ -7,11 +7,23 @@
     },
     "include": ["./src"],
     "references": [
-        { "path": "../blockchain-link-types" },
-        { "path": "../blockchain-link-utils" },
-        { "path": "../utils" },
-        { "path": "../utxo-lib" },
-        { "path": "../e2e-utils" },
-        { "path": "../type-utils" }
+        {
+            "path": "../blockchain-link-types"
+        },
+        {
+            "path": "../blockchain-link-utils"
+        },
+        {
+            "path": "../utils"
+        },
+        {
+            "path": "../utxo-lib"
+        },
+        {
+            "path": "../e2e-utils"
+        },
+        {
+            "path": "../type-utils"
+        }
     ]
 }
