--- a/packages/protobuf/tsconfig.lib.json
+++ b/packages/protobuf/tsconfig.lib.json
@@ -1,6 +1,12 @@
 {
     "extends": "../../tsconfig.lib.json",
-    "compilerOptions": { "outDir": "lib" },
+    "compilerOptions": {
+        "outDir": "lib"
+    },
     "include": ["./src"],
-    "references": [{ "path": "../schema-utils" }]
+    "references": [
+        {
+            "path": "../schema-utils"
+        }
+    ]
 }
