--- a/packages/utils/tsconfig.lib.json
+++ b/packages/utils/tsconfig.lib.json
@@ -1,6 +1,8 @@
 {
     "extends": "../../tsconfig.lib.json",
-    "compilerOptions": { "outDir": "lib" },
+    "compilerOptions": {
+        "outDir": "lib"
+    },
     "include": ["./src"],
     "references": []
 }
