chore: TS project references for build:libs + buildless utxo-lib (#11526)
* chore(repo): buildless utxo-lib

* chore: use project references for build:libs too

* chore: reformat tsconfig.lib.json

--- a/packages/utxo-lib/package.json
+++ b/packages/utxo-lib/package.json
@@ -26,7 +26,7 @@
         "!**/*.map"
     ],
     "publishConfig": {
-        "main": "lib/index.js",
+        "main": "./lib/index.js",
         "types": "lib/index.d.ts",
         "typings": "lib/index.d.ts"
     },
