--- a/packages/connect-explorer-nextra/tsconfig.json
+++ b/packages/connect-explorer-nextra/tsconfig.json
@@ -5,7 +5,6 @@
         "lib": ["dom", "dom.iterable", "esnext"],
         "emitDeclarationOnly": false,
         "noEmit": true,
-        "noImplicitAny": false,
         "plugins": [
             { "name": "typescript-styled-plugin" }
         ]
@@ -20,6 +19,7 @@
         { "path": "../connect-web" },
         { "path": "../connect-webextension" },
         { "path": "../protobuf" },
+        { "path": "../schema-utils" },
         { "path": "../utils" }
     ]
 }
