refactor(connect-explorer): for nextra-theme-docs to our repo

--- a/packages/connect-explorer-nextra/package.json
+++ b/packages/connect-explorer-nextra/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@sinclair/typebox": "^0.31.28",
         "@trezor/components": "workspace:^",
+        "@trezor/connect-explorer-theme": "workspace:^",
         "@trezor/connect-web": "workspace:^",
         "@trezor/connect-webextension": "workspace:^",
         "@trezor/protobuf": "workspace:^",
