chore(connect-explorer): Update styled components

--- a/packages/connect-explorer-theme/tsconfig.json
+++ b/packages/connect-explorer-theme/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "outDir": "dist",
         "target": "es2016",
         "module": "ESNext",
         "declaration": false,
@@ -14,10 +15,10 @@
         "types": ["vitest/globals"],
         "resolveJsonModule": true,
         "paths": {
-            // fixes incorrect types for flexsearch https://github.com/nextapps-de/flexsearch/issues/392#issuecomment-1552286514
             "flexsearch": [
                 "./node_modules/@types/flexsearch"
             ]
         }
-    }
+    },
+    "references": [{ "path": "../components" }]
 }
