--- a/packages/connect-explorer-nextra/tsconfig.json
+++ b/packages/connect-explorer-nextra/tsconfig.json
@@ -17,6 +17,7 @@
     ],
     "references": [
         { "path": "../components" },
+        { "path": "../connect-explorer-theme" },
         { "path": "../connect-web" },
         { "path": "../connect-webextension" },
         { "path": "../protobuf" },
